hphp/hack/test/typecheck/coeffects/strict-contexts/controlled_local-ops.php.exp
File "controlled_local-ops.php", line 13, characters 3-6:
`echo` or `print` builtin requires the capability IO, which is not provided by the context. (Typing[4401])
  File "controlled_local-ops.php", line 12, characters 31-40:
  The local (enclosing) context provides the capability set {ReadGlobals, System, WriteProperty}
File "controlled_local-ops.php", line 14, characters 3-20:
Modifying static properties requires the capability AccessGlobals, which is not provided by the context. (Typing[4401])
  File "controlled_local-ops.php", line 12, characters 31-40:
  The local (enclosing) context provides the capability set {ReadGlobals, System, WriteProperty}
